[project]
name = "test-task"
version = "0.1.0"
description = "parsing db by requests,bs4" 
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dynaconf>=3.2.10",
    "python-dotenv>=1.0.1",
    "beautifulsoup4>=4.14.1",
    "requests>=2.32.4",
    "tabulate>=0.9.0",
    "pydantic>=2.11.7",
]
authors = [
    { name = "Kuznetsov Aleksandr", email = "ku.alex.bo@gmail.com" }
]

[project.optional-dependencies]
dev = [
    "black>=25.1.0",
    "flake8>=7.3.0",
    "isort>=6.0.1",
    "mypy_extensions>=1.1.0",
    "pycodestyle>=2.14.0",
    "pyflakes>=3.4.0",
    "typing-inspection>=0.4.1",
    "typing-extensions>=4.14.1",
    "platformdirs>=4.3.8",
    "pathspec>=0.12.1",
    "packaging>=25.0",
    "charset-normalizer>=3.4.2",
    "idna>=3.10",
    "certifi>=2025.7.14",
    "urllib3>=2.5.0",
    "click>=8.2.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["app"] 
skip = ["migrations", ".venv", "venv"]